--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,12 @@ node_modules/
 
 # Environment variables
 .env
+
+#macfiles OS generated files #
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
