--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "D": "^1.0.0",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.1"
   },
